# SaltAI_Whisper_Transcriber

./: nodes.py  pyproject.toml  readme.md  requirements.txt
workflows/: Whisper_Workflow_Example.json
