[project]
name = "SaltAI Whisper Transcribe"
description = "Transcribe videos or audio with Whisper, either locally or via OpenAI's API"
version = "1.0.0"
license = "LICENSE"
dependencies = ["openai>=1.13.3", "pydub>=0.25.1", "moviepy>=1.0.3", "transformers>=4.39.2"]

[project.urls]
Repository = "https://github.com/haohaocreates/PR-SaltAI_Whisper_Transcriber-e087b361"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "saltai"
DisplayName = "SaltAI_Whisper_Transcriber"
Icon = ""
